update to push to docker hub

--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
                         <id>start</id>
                         <phase>pre-integration-test</phase>
                         <goals>
+                            <goal>stop</goal>
                             <goal>build</goal>
                             <goal>start</goal>
                         </goals>
@@ -92,60 +93,15 @@
                         <phase>post-integration-test</phase>
                         <goals>
                             <goal>stop</goal>
+                            <goal>push</goal>
                         </goals>
                     </execution>
                 </executions>
-
-
                 <configuration>
                     <images>
                         <image>
-                            <name>docker.io/kkapelon/docker-maven-comparison</name>
-                            <build>
-                                <dockerFile>${project.basedir}/Dockerfile</dockerFile >
-                            </build>
-                            <run>
-                                <ports>
-                                    <port>8080:8080</port>
-                                </ports>
-                                <wait>
-                                    <!-- Check for this URL to return a 200 return code .... -->
-                                    <url>http://localhost:8080/wizard</url>
-                                    <time>120000</time>
-                                </wait>
-                            </run>
-                        </image>
-
-                    </images>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>io.fabric8</groupId>
-                <artifactId>docker-maven-plugin</artifactId>
-                <version>0.26.0</version>
-                <executions>
-                    <execution>
-                        <id>start</id>
-                        <phase>pre-integration-test</phase>
-                        <goals>
-                            <goal>build</goal>
-                            <goal>start</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop</id>
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>stop</goal>
-                        </goals>
-                    </execution>
-                </executions>
-
-
-                <configuration>
-                    <images>
-                        <image>
-                            <name>was-liberty-app</name>
+                            <name>was-liberty-app:${project.version}</name>
+                                <alias>was-liberty-app</alias>
                             <build>
                                 <dockerFile>${project.basedir}/Dockerfile</dockerFile >
                             </build>
@@ -161,6 +117,11 @@
                             </run>
                         </image>
                     </images>
+                    <registry>registry.hub.docker.com/fa1ix</registry>
+                    <authConfig>
+                        <username>fa1ix</username>
+                        <password></password>
+                    </authConfig>
                 </configuration>
             </plugin>
         </plugins>
